--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <title>Arsha</title>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=2.0" name="viewport">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
